<resources>
    <string name="app_name">LifeManager</string>
    <string name="dayViewBtn">Day</string>
    <string name="weekViewBtn">Week</string>
    <string name="monthViewBtn">Month</string>
    <string name="scheduleViewBtn">Schedule</string>
    <string name="tasksViewBtn">Tasks</string>
    <string name="saveBtn">Save</string>
    <string name="date_selector">Date Selector</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="addEventBtn">Add Event</string>
</resources>
